--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@expo-google-fonts/actor": "^0.2.2",
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/webpack-config": "^0.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^8.10.1",
     "react": "18.0.0",
